[tool.poetry]
name = "twitter-media-viewer-backend"
version = "0.1.0"
description = ""
authors = ["Arthur Coelho <abcoelhojc@gmail.com>"]
readme = "README.md"
packages = [{include = "twitter_media_viewer_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
tweepy = "^4.12.1"
configparser = "^5.3.0"
fastapi = {extras = ["all"], version = "^0.88.0"}


[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
